--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "restify": "^4.1.1",
     "urban": "^0.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^4.1.1"
+  },
   "bundleDependencies": [],
   "private": true,
   "main": "index.js",
