--- a/package.json
+++ b/package.json
@@ -34,7 +34,14 @@
     "restify": "^4.1.1",
     "urban": "^0.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^4.2.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1"
+  },
   "bundleDependencies": [],
   "private": true,
   "main": "index.js",
